Changed the styling

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 hr {
   border-style: none;
   border-top-style: dotted;
-  border-color: grey;
+  border-color: rgb(167, 104, 104);
   border-width: 8px;
   width: 5%;
 }
